# risc-sim

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: benchmarks.rs  coremark.rs  doom.rs  memory.rs
scripts/: build.sh  generate_expected_results.sh  pgo-build.sh  pgo-profile.sh  pgo-rebuild.sh
src/: cli_utils.rs  doom.rs  lib.rs  main.rs  test.rs  types.rs
src/asm/: assembler.rs
src/cpu/: cpu_core.rs  memory_access.rs  mod.rs
src/cpu/memory/: btree_memory.rs  hashmap_memory.rs  memory_core.rs  mmu.rs  mod.rs  page_storage.rs  program_cache.rs  raw_memory.rs  raw_page_storage.rs  raw_table_memory.rs  raw_vec_memory.rs  table_memory.rs  user_memory.rs  vec_binsearch_memory.rs  vec_memory.rs  vec_u8_memory.rs
src/elf/: elf_loader.rs
src/isa/: cpu.rs  memory.rs  mod.rs  traps.rs  types.rs
src/isa/csr/: csr.rs  csr_types.rs  mod.rs
src/isa/rv32_zicsr/: mod.rs  rv32_zicsr.rs  zicsr.rs
src/isa/rv32_zifencei/: mod.rs  rv32_zifencei.rs  zifencei.rs
src/isa/rv32i/: control_transfer.rs  environment.rs  float_reg_reg.rs  immediate.rs  integer_reg_reg.rs  load_store.rs  mod.rs
src/rv32i/: mod.rs
src/system/: kernel.rs  mod.rs  passthrough_kernel.rs  plic.rs  uart.rs  virtio.rs
src/tests/: mod.rs  test.rs  test_memory.rs  util.rs
src/utils/: binary_utils.rs  data.rs  mod.rs
tests/: advanced_c  advanced_c.c  advanced_c.res  advanced_c_64  binary  binary.c  binary.res  binary_64  coremark.elf  fib_heavy  fib_heavy.c  fib_heavy.res  fib_heavy_64  malloc  malloc.c  malloc_64  malloc_64.res  print_calc  print_calc.c  print_calc_64  print_calc_64.res  printf  printf.c  printf_64
(+20 files in other folders)
