[package]
name = "risc-sim"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"

[dependencies]
anyhow = "1.0.86"
array-init = "2.1.0"
bitfield = "0.17.0"
bitflags = "2.6.0"
clap = { version = "4.5.24", features = ["derive"] }
ctrlc = "3.4.5"
lazy_static = "1.5.0"
minifb = "0.27.0"
nix = { version = "0.29.0", features = ["time"] }
once_cell = "1.20.2"
rustc-hash = "2.0.0"
termios = "0.3.3"

[dev-dependencies]
proptest = "1.5.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "coremark"
harness = false
required-features = ["maxperf"]

[[bench]]
name = "memory"
harness = false
required-features = ["maxperf"]

[[bench]]
name = "doom"
harness = false
required-features = ["maxperf"]


[features]
default = ["maxperf"]
maxperf = []
